--- a/POS.Web/appsettings.json
+++ b/POS.Web/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=PH-PF4YA6TD\\SQLEXPRESS;Database=RedDb;Trusted_Connection=True;TrustServerCertificate=True"
+  //}
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PH-PF4YA6TD\\SQLEXPRESS;Database=RedDb;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=RedDB;Username=postgres;Password=Beine@2014"
   }
+
 }
