--- a/POS.Web/appsettings.json
+++ b/POS.Web/appsettings.json
@@ -9,8 +9,11 @@
   //"ConnectionStrings": {
   //  "DefaultConnection": "Server=PH-PF4YA6TD\\SQLEXPRESS;Database=RedDb;Trusted_Connection=True;TrustServerCertificate=True"
   //}
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Host=localhost;Port=5432;Database=RedDB;Username=postgres;Password=Beine@2014"
+  //}
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=RedDB;Username=postgres;Password=Beine@2014"
+    "DefaultConnection": "Host=postgres.railway.internal;Port=5432;Database=railway;Username=postgres;Password=fhveXoFGkkJkYzYLhTHPGBOBeLzlSiDM"
   }
-
+ 
 }
